--- a/RestartIt.csproj
+++ b/RestartIt.csproj
@@ -18,9 +18,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Resource Include="app.ico">
+		<Content Include="app.ico">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Resource>
+		</Content>
 		<None Update="app.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
