--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,48 +4,12 @@ on:
   push:
     branches: [ "master" ]
     tags:
-      - 'v*'
+      - 'v*.*.*'
   pull_request:
     branches: [ "master" ]
 
 jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-
-    - name: Restore dependencies
-      run: dotnet restore RestartIt.csproj
-
-    - name: Build Release
-      run: dotnet build RestartIt.csproj --configuration Release --no-restore
-
-    - name: Publish Application
-      run: dotnet publish RestartIt.csproj --configuration Release --no-build --output ./publish
-
-    - name: Create Release Package
-      run: |
-        cd publish
-        Compress-Archive -Path * -DestinationPath ../RestartIt-${{ github.ref_name }}.zip
-      shell: pwsh
-
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: RestartIt-${{ github.ref_name }}
-        path: RestartIt-${{ github.ref_name }}.zip
-        retention-days: 90
-
-  release:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
+  build-and-release:
     runs-on: windows-latest
     permissions:
       contents: write
@@ -68,16 +32,41 @@ jobs:
     - name: Publish Application
       run: dotnet publish RestartIt.csproj --configuration Release --no-build --output ./publish
 
+    - name: Get version from tag
+      id: get_version
+      run: |
+        if ("${{ github.ref }}" -like "refs/tags/*") {
+          $version = "${{ github.ref_name }}"
+        } else {
+          $version = "master-${{ github.sha }}".Substring(0, 20)
+        }
+        echo "version=$version" >> $env:GITHUB_OUTPUT
+        echo "Version: $version"
+      shell: pwsh
+
     - name: Create Release Package
       run: |
         cd publish
-        Compress-Archive -Path * -DestinationPath ../RestartIt-${{ github.ref_name }}.zip
+        Compress-Archive -Path * -DestinationPath ../RestartIt-${{ steps.get_version.outputs.version }}.zip
+        cd ..
+        echo "Created: RestartIt-${{ steps.get_version.outputs.version }}.zip"
+        if (Test-Path "RestartIt-${{ steps.get_version.outputs.version }}.zip") {
+          echo "File size: $((Get-Item "RestartIt-${{ steps.get_version.outputs.version }}.zip").Length) bytes"
+        }
       shell: pwsh
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
       with:
-        files: RestartIt-${{ github.ref_name }}.zip
+        name: RestartIt-${{ steps.get_version.outputs.version }}
+        path: RestartIt-${{ steps.get_version.outputs.version }}.zip
+        retention-days: 90
+
+    - name: Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v2
+      with:
+        files: RestartIt-${{ steps.get_version.outputs.version }}.zip
         generate_release_notes: true
         draft: false
         prerelease: false
