--- a/RestartIt.csproj
+++ b/RestartIt.csproj
@@ -7,9 +7,9 @@
 		<Nullable>disable</Nullable>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<ApplicationIcon>app.ico</ApplicationIcon>
-		<Version>1.3.1</Version>
-		<AssemblyVersion>1.3.1.0</AssemblyVersion>
-		<FileVersion>1.3.1.0</FileVersion>
+		<Version>1.3.3</Version>
+		<AssemblyVersion>1.3.3.0</AssemblyVersion>
+		<FileVersion>1.3.3.0</FileVersion>
 		<Company>Antik79</Company>
 		<Product>RestartIt</Product>
 		<Description>Windows Application Monitor - Automatically restart programs that stop running</Description>
@@ -28,8 +28,11 @@
 		<Content Include="app.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="Localization\*.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
+        <Content Include="Localization\*.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Themes\*.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
